[package]
name = "minigrep"
version = "0.2.0"
description = "Find pattern in stdin or file content"
edition = "2021"
publish = false

[lib]
name = "minigreplib"
path = "src/lib.rs"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
confy = "0.5.1"
env_logger = "0.10.1"
log = "0.4.20"
owo-colors = "4.0.0"
serde = { version = "1.0.193", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
cargo-llvm-cov = "0.6.0"
predicates = "3.0.4"
