[package]
name = "oko"
version = "0.2.1"
description = "Search, Count, Transform and Output"
edition = "2021"
publish = false

[lib]
name = "okolib"
path = "src/lib.rs"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
confy = "0.6.0"
env_logger = "0.11.1"
log = "0.4.20"
owo-colors = "4.0.0"
serde = { version = "1.0.193", features = ["derive"] }
regex = "1.10.2"
serde_json = "1.0.109"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
cargo-llvm-cov = "0.6.0"
predicates = "3.0.4"
